--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">NotesApp</string>
+    <string name="type_something_here">Type Something Here.....</string>
+    <string name="title">Title</string>
+    <string name="notes">Notes</string>
+    <string name="content">content</string>
 </resources>
